--- a/portalti.html
+++ b/portalti.html
@@ -101,7 +101,9 @@
       </div>
     </div>
   </div>
-  <table class="table table-striped table-bordered">
+<!-- RESTANTE DO HTML MANTIDO COMO ESTÁ -->
+
+<table class="table table-striped table-bordered">
     <thead class="table-dark">
       <tr>
         <th>Documento</th>
@@ -113,40 +115,29 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Manual de Segurança da Informação</td>
-        <td>Manual</td>
-        <td>Ramon Zarbinati</td>
-        <td><span class="badge bg-success">Atualizado</span></td>
-        <td>20/04/2025</td>
-        <td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td>
-      </tr>
-      <tr>
-        <td>Política de Backup</td>
-        <td>Política</td>
-        <td>Ramon Zarbinati</td>
-        <td><span class="badge bg-warning text-dark">Revisão</span></td>
-        <td>15/03/2025</td>
-        <td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td>
-      </tr>
-      <tr>
-        <td>Processo de Onboarding</td>
-        <td>Processo</td>
-        <td>Camila Rocha</td>
-        <td><span class="badge bg-success">Atualizado</span></td>
-        <td>18/04/2025</td>
-        <td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td>
-      </tr>
-      <tr>
-        <td>Manual de Uso VPN</td>
-        <td>Manual</td>
-        <td>Larissa Martins</td>
-        <td><span class="badge bg-warning text-dark">Pendente</span></td>
-        <td>02/02/2025</td>
-        <td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td>
-      </tr>
+      <tr><td>Treinamentos de LGPD, Segurança Cibernética e da área de T.I do período</td><td>Treinamento</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Relação dos sistema utilizados, com usuários e perfis de acesso</td><td>Relatório</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Relatório com os usuários ativos e última troca de senha e último acesso</td><td>Relatório</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Relatório Anual sobre a implementação do plano de ação e de resposta a incidentes - Res. 4893/21 e Res.85/21</td><td>Relatório</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Políticas de Segurança Cibernética, acompanhada da ata de aprovação</td><td>Política</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Políticas de Privacidade e Cookies, acompanhada da ata de aprovação</td><td>Política</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Política de senhas</td><td>Política</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Plano de ação e de resposta a incidentes</td><td>Plano</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Plano de Continuidade de Negócios</td><td>Plano</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Inventário da T.I com Termos de Responsabilidade</td><td>Inventário</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Evidência dos Testes de Vulnerabilidade/Penetração do período</td><td>Evidência</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Descrição dos controles de segurança, como firewalls, sistemas de detecção de intrusões e criptografia</td><td>Descritivo</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Descritivo dos dados, registros e informações relativas aos mecanismos de acompanhamento e controle requeridos pelo art. 21 da Res. 4893/21 - Res.85/21</td><td>Descritivo</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Descritivo da estrutura interna e terceirizada para T.I e apresentar contratos com prestadores de serviços</td><td>Descritivo</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Descritivo com as rotinas de backup e evidência da última restauração realizada</td><td>Descritivo</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Cópia dos Antivírus e Firewall vigentes</td><td>Cópia</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Contratos da Área de T.I</td><td>Contrato</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Comprovante de comunicação ao BC da contratação de serviços relevantes de processamento, armazenamento de dados e de computação em nuvem</td><td>Comprovante</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
+      <tr><td>Ata de designação do DPO</td><td>Ata</td><td>Ramon Zarbinati</td><td><span class="badge bg-warning text-dark">Pendente</span></td><td>22/04/2025</td><td><a href="#" class="btn btn-sm btn-primary">Acesse este arquivo</a></td></tr>
     </tbody>
   </table>
+  
+  
   <footer class="text-center mt-4">
     <small>Última atualização do dashboard: <strong>22/04/2025</strong></small>
   </footer>
