--- a/portalti.html
+++ b/portalti.html
@@ -54,7 +54,7 @@
       <div class="card bg-primary text-white">
         <div class="card-body">
           <h5 class="card-title">Total de Documentos</h5>
-          <p class="display-5">35</p>
+          <p class="display-5">19</p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <div class="card bg-success text-white">
         <div class="card-body">
           <h5 class="card-title">Atualizados</h5>
-          <p class="display-5">28</p>
+          <p class="display-5">0</p>
         </div>
       </div>
     </div>
@@ -70,14 +70,21 @@
       <div class="card bg-warning text-dark">
         <div class="card-body">
           <h5 class="card-title">Pendentes / Revisão</h5>
-          <p class="display-5">7</p>
+          <p class="display-5">19</p>
         </div>
       </div>
     </div>
     <div class="col-md-3">
       <div class="card bg-info text-dark">
         <div class="card-body">
-          <h5 class="card-title">Microsoft Secure Score</h5>
+            <h5 class="card-title">
+                Microsoft Secure Score
+                <button type="button" class="btn btn-sm btn-light ms-2" data-bs-toggle="popover" title="O que é isso?"
+                  data-bs-content="O Microsoft Secure Score é uma métrica que avalia o quanto a sua empresa está protegida dentro do Microsoft 365. Um score alto significa que as melhores práticas de segurança estão sendo aplicadas.">
+                  ?
+                </button>
+              </h5>
+              
           <p class="display-5">96,81%</p>
         </div>
       </div>
@@ -88,7 +95,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Máquinas Monitoradas (Updates e Melhorias)</h5>
-          <p class="display-5">120</p>
+          <p class="display-5">32</p>
         </div>
       </div>
     </div>
@@ -96,7 +103,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Máquinas Monitoradas (BitDefender)</h5>
-          <p class="display-5">115</p>
+          <p class="display-5">50</p>
         </div>
       </div>
     </div>
@@ -184,5 +191,12 @@
   }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'));
+    var popoverList = popoverTriggerList.map(function (el) {
+      return new bootstrap.Popover(el);
+    });
+  </script>
+  
 </body>
 </html>
