--- a/portalti.html
+++ b/portalti.html
@@ -60,7 +60,7 @@
 <!-- DASHBOARD -->
 <div class="container py-4 dashboard" id="dashboard">
   <img src="https://media.discordapp.net/attachments/1045145781763571835/1366731821924094042/Logo_VIPe_Completo_-_Uso_fundo_claro.png?ex=681203b2&is=6810b232&hm=946f93c586ebf5254d5efd08fcb769cc6c664c56a7c58c555577b97d4e274461&=&format=webp&quality=lossless&width=1814&height=693" alt="Logo" style="height: 50px; display: block; margin: 0 auto;">
-  <h2 class="mb-4 text-center">Dashboard de Gestão Documental e TI</h2>
+  <h2 class="mb-4 text-center">Portal de Documentação TI</h2>
   <div class="row mb-4 text-center">
     <div class="col-md-3">
       <div class="card bg-primary text-white">
